fix uncollapse grid styles; update bower version

--- a/src/style/grid.less
+++ b/src/style/grid.less
@@ -97,6 +97,8 @@
 			{
 				margin-left:  (-1 * @gutter / 2);
 				margin-right: (-1 * @gutter / 2);
+				width: auto;
+				max-width: none;
 			}
 		}
 
@@ -129,6 +131,8 @@
 				{
 					margin-left:  (-1 * @gutter / 2);
 					margin-right: (-1 * @gutter / 2);
+					width: auto;
+					max-width: none;
 				}
 			}
 		}
